fix small screen large dropdown collapser position

--- a/css/components/dropdown.css
+++ b/css/components/dropdown.css
@@ -29,7 +29,7 @@
   display: block;
   margin: .5em auto;
   position: sticky;
-  bottom: 0;
+  bottom: .75em;
   right: 0;
   left: 0;
 }
